src/objects/Stage__c.object
<CustomObject>
    <description>Festival stages.</description>
    <fields>
        <fullName>Crowd_Capacity__c</fullName>
        <description>Number of people stage can accommodate.</description>
        <label>Crowd Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Festival_Stages__c</fullName>
        <label>Festival</label>
        <referenceTo>Festival__c</referenceTo>
        <relationshipLabel>Stages</relationshipLabel>
        <relationshipName>Stages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Has_Piano__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether stage has a piano.</description>
        <label>Has Piano</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether stage is main stage.</description>
        <label>Main Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outdoor__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checks whether stage is outdoor or indoor (in a tent or building).</description>
        <label>Outdoor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Equipment_Available__c</fullName>
        <description>Stage equipment available.</description>
        <label>Special Equipment Available</label>
        <picklist>
            <picklistValues>
                <fullName>Lasers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pyrotechnics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smoke Machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Drumsets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Subwoofers</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stage_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The stage manager.</description>
        <label>Stage Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>